Made Corrections in alignment

--- a/style/style.scss
+++ b/style/style.scss
@@ -1,11 +1,9 @@
 @import "./variables/global-variables";
 @import "./variables/reset";
 @import "./variables/mixin";
-@import "./fonts/font-face.css";
+@import "./fonts/font-face";
 
 body {
-  opacity: 1;
-  font-family: "Proxima Nova", m, sans-serif;
   overflow-x: hidden;
   background-color: #e0e3e8;
 }
@@ -807,7 +805,7 @@ body {
           background-color: #fafafa;
 
           &.leaf-image {
-            background: #fafafa
+            background: transparent
               url("../assets/images/annie-spratt-hX_hf2lPpUU-unsplash.png") 100%
               110% no-repeat padding-box;
             background-size: 250px 350px;
@@ -1579,14 +1577,15 @@ footer {
       @include myFlex(column, center, center);
       margin: 10px 0 0 2px;
       width: 100%;
-      height: 450px;
+      height: max-height;
       .banner-header-1 {
         display: none;
       }
       .banner-header-2 {
-        height: 116px;
+        font-size: 48px;
+        height: max-width;
         width: 333px;
-        margin: 2px 35px 4px 35px;
+        margin: 21px 5px 4px 21px;
       }
       .banner-text-1 {
         width: 334px;
@@ -1603,7 +1602,7 @@ footer {
       }
     }
     .right-banner {
-      height: inherit;
+        height: max-height;
       .banner-image-container {
         width: 289.57px;
         height: 289.57px;
@@ -1903,7 +1902,7 @@ footer {
   .product-teaser-4 {
     @include myFlex(column, space-between, center);
     width: 100%;
-    height: 698px;
+    height: 598px;
     background: #eef3f4 0% 0% no-repeat padding-box;
     overflow-x: scroll;
     overflow-y: hidden;
@@ -1927,8 +1926,18 @@ footer {
     nav {
       width: 1088px;
       height: 20px;
-      margin: 82px 100px 29px 860px;
+      margin: 61px 100px 19px 860px;
     }
+
+    .product-image {
+        width: 251px;
+        height: 346px;
+        background-color: #fafafa;
+
+        &.leaf-image {
+          object-fit: none;
+        }
+      }
 
     .card-container {
       @include myFlex(row, center, center);
@@ -1972,7 +1981,7 @@ footer {
           .card {
             width: 271px;
             height: 271px;
-            margin-top: 80px;
+            margin-top: 20px;
             margin-left: -40px;
             text-align: center;
             h1 {
@@ -2677,7 +2686,7 @@ footer {
 
           .product-image {
             &.leaf-image {
-              background: #fafafa
+              background: transparent
                 url("../assets/images/annie-spratt-hX_hf2lPpUU-unsplash@2x.png")
                 0% 100% no-repeat padding-box;
               background-size: 251px 346px;
